// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`speakability renders 0 1`] = `
Array [
  .c0 {
  speakability: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: 0;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders function 1`] = `
Array [
  .c0 {
  speakability: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: has;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: has;
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders invalid theme path 1`] = `
Array [
  .c0 {
  speakability: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders negative number 1`] = `
Array [
  .c0 {
  speakability: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  speakability: July;
}

@media screen and (min-width:November) {
  .c0 {
    speakability: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speakability: July;
}

@media screen and (min-width:November) {
  .c0 {
    speakability: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  speakability: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speakability: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speakability: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speakability: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    speakability: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    speakability: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speakability: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    speakability: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    speakability: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    speakability: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  speakability: July;
}

@media May {
  .c0 {
    speakability: August;
  }
}

@media April {
  .c0 {
    speakability: September;
  }
}

@media January {
  .c0 {
    speakability: November;
  }
}

@media April {
  .c0 {
    speakability: August;
  }
}

@media June {
  .c0 {
    speakability: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speakability: July;
}

@media May {
  .c0 {
    speakability: August;
  }
}

@media April {
  .c0 {
    speakability: September;
  }
}

@media January {
  .c0 {
    speakability: November;
  }
}

@media April {
  .c0 {
    speakability: August;
  }
}

@media June {
  .c0 {
    speakability: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  speakability: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speakability: November;
  }
}

@media April {
  .c0 {
    speakability: January;
  }
}

@media January {
  .c0 {
    speakability: December;
  }
}

@media April {
  .c0 {
    speakability: April;
  }
}

@media June {
  .c0 {
    speakability: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  speakability: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speakability: November;
  }
}

@media April {
  .c0 {
    speakability: January;
  }
}

@media January {
  .c0 {
    speakability: December;
  }
}

@media April {
  .c0 {
    speakability: April;
  }
}

@media June {
  .c0 {
    speakability: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    speakability: July;
  }
}

@media April {
  .c0 {
    speakability: August;
  }
}

@media January {
  .c0 {
    speakability: September;
  }
}

@media April {
  .c0 {
    speakability: November;
  }
}

@media June {
  .c0 {
    speakability: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    speakability: July;
  }
}

@media April {
  .c0 {
    speakability: August;
  }
}

@media January {
  .c0 {
    speakability: September;
  }
}

@media April {
  .c0 {
    speakability: November;
  }
}

@media June {
  .c0 {
    speakability: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speakability: January;
  }
}

@media April {
  .c0 {
    speakability: December;
  }
}

@media January {
  .c0 {
    speakability: April;
  }
}

@media April {
  .c0 {
    speakability: May;
  }
}

@media June {
  .c0 {
    speakability: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    speakability: January;
  }
}

@media April {
  .c0 {
    speakability: December;
  }
}

@media January {
  .c0 {
    speakability: April;
  }
}

@media April {
  .c0 {
    speakability: May;
  }
}

@media June {
  .c0 {
    speakability: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders postitive number 1`] = `
Array [
  .c0 {
  speakability: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders string 1`] = `
Array [
  .c0 {
  speakability: July;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: July;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: June;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: June;
}

<div
    className="c0"
  />,
]
`;

exports[`speakability renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`speakability renders valid theme path 1`] = `
Array [
  .c0 {
  speakability: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  speakability: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
